2003-06-11  Bastien Nocera  <hadess@hadess.net>

	* data/schemas.sh: try to thumbnail Real Video files
	* src/totem.c: (totem_action_error_try_download): added a FIXME

2003-06-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fixes to get the HAVE_X86 #define right
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_can_get_frames),
	(bacon_video_widget_get_current_frame): don't whinge on 0x0 dimensions,
	probably an error, or fail later while getting the frame
	* src/totem-video-thumbnailer.c: (main): try harder to capture small
	streams, fixes thumbnailing real short films
	* src/totem.c: (totem_action_set_mrl), (totem_setup_recent):
	fix a crash on startup with setting the limit of the egg_recent stuff,
	try to reopen the movie after downloading a new codec so it can be
	played straight away, removed some unused debug

2003-06-11  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-message-connection.c: (try_server),
	(bacon_message_connection_set_callback): updated from libbacon
	* src/totem.c: (main): if we're a server, only listen to changes
	after the application is fully started, fixes a crash on startup
	when launching 2 videos from nautilus at the same time

2003-06-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am:
	* src/bacon-video-widget-xine.c: (bacon_video_widget_open):
	* src/totem.c: (totem_action_set_mrl), (totem_setup_recent): only
	try to auto-download codecs on x86 platforms with a recent enough
	version of libcurl, only show 5 items in the recent files list

2003-06-09  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: moved all the display preferences to another tab of
	the notebook, added GUI bits for the brightness/contrast prefs

2003-06-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (create_submenu): add a "None" entry to the subtitles
	submenu to turn them off completely (for some DVDs, "Auto" is not "No
	subtitles") (Closes: #113526)

2003-06-09  Bastien Nocera  <hadess@hadess.net>