@@ -1,5 +1,10 @@
 2003-06-11  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-video-thumbnailer.c: (main): more tweaks for thumbnailing
+	small streams
+
+2003-06-11  Bastien Nocera  <hadess@hadess.net>
+
 	* data/schemas.sh: try to thumbnail Real Video files
 	* src/totem.c: (totem_action_error_try_download): added a FIXME
 
